<resources>
    <string name="app_name">My Github Users</string>
    <string name="title_action_search">Cari</string>
    <string name="title_action_profile">Tentang</string>
    <string name="title_home">Github Users</string>
    <string name="title_action_language">Ubah Bahasa</string>
    <string name="tab_text_followers">Followers</string>
    <string name="tab_text_following">Following</string>
    <string name="search_hint">Cari pengguna</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_welcome_home"><b>Selamat datang</b>, Ayo mulai cari pengguna...</string>
    <string name="toast_item_selected">Kamu memilih %s</string>
    <string name="title_splash_screen">Mari temukan pengguna lebih banyak !</string>
    <string name="title_favorite">favorite</string>
    <string name="settings">Pengaturan Notifikasi</string>
    <string name="key_reminder">key_reminder</string>
    <string name="setting_reminder">Aktifkan pengingat pada pukul 9 Pagi</string>
    <string name="reminder_actived">Kamu telah mengaktifkan Notifikasi pengigat</string>
    <string name="repeating_cancel">Notifikasi telah dibatalkan</string>
    <string name="title_notification">Hallo! ayo cek github user sekarang!</string>
    <string name="title_favorite_users">Pengguna favorite</string>
    <string name="information_favorite">Belum ada user favorite</string>
</resources>