<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:iconTint="@color/black"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_baseline_favorite_white_24"
        android:title="@string/title_favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_baseline_notifications_black_24"
        android:title="@string/settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_profile"
        android:title="@string/title_action_profile"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_change_language"
        android:title="@string/title_action_language" />

</menu>